# DocIntellect

./: .env.prod  .gitignore  README.md  Taskfile.yaml  docker-compose.prod.yml  docker-compose.yml
.devops/images/microservices/llm_interaction_service/env/: Dockerfile  Dockerfile-base
.devops/images/nginx/: Dockerfile
.devops/images/nginx/src/: nginx.conf
.devops/images/nginx/src/common/: brotli.conf  gzip.conf  ssl.conf
.github/workflows/: client-docker-publish.yml  llm-interaction-service-docker-publish.yml
client/: .env.development  index.html  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/api/: api.ts
client/src/pages/: ChatPage.tsx
docs/: LLM_interaction_service_flow.excalidraw
llm_interaction_service/: .env.development  Dockerfile  Dockerfile.1  pyproject.toml  tox.ini
llm_interaction_service/.docker/: entrypoint.sh
llm_interaction_service/app/api/endpoints/interaction/: generate.py  process_file.py
llm_interaction_service/app/core/: app_logger.py  application.py  config.py  constants.py  middleware.py
llm_interaction_service/app/factories/: ocr_service_factory.py  pdf_to_image_service_factory.py
llm_interaction_service/app/interfaces/: llm_interaction_service_interface.py  parse_file_service_interface.py
llm_interaction_service/app/services/: groq_service.py  ollama_service.py  paddle_ocr_service.py  parse_file_service.py  tesseract_ocr_service.py
llm_service/: .pre-commit-config.yaml  Dockerfile  Dockerfile-back  pyproject.toml
